[package]
name = "brainrust"
version = "0.1.4"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2024"
description = "Brainfuck interpreter"
repository = "https://github.com/LimeEng/brainrust/"
publish = false

[dependencies]
clap = { version = "4.5", features = ["cargo", "color", "suggestions", "wrap_help"] }
colored = "3.0"
tabled = { version = "0.18", features = ["ansi"] }

[dev-dependencies]
paste = "1.0"
