[package]
name = "brainrust-cli"
version = "0.1.0"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainrust-engine = { path = "../brainrust-engine" }
clap = {version = "2.33.0", features = ["color", "wrap_help", "suggestions"]}
